--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,21 +1,31 @@
-name: CI/CD
+name: Rust CI/CD Pipeline
 on:
   push:
-    branches: ["main"]
+    branches: [ "main" ]
   pull_request:
-    branches: ["main"]
-  workflow_dispatch:
-
+    branches: [ "main" ]
+env:
+  CARGO_TERM_COLOR: always
 jobs:
   build:
-    runs-on: ubuntu-latest #VM that GH actions will run on
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: install packages
-        run: make python_install
-      - name: format
-        run: make python_format
-      - name: lint
-        run: make python_lint
-      - name: test
-        run: make python_test
+    - uses: actions/checkout@v3
+    - uses: actions-rs/toolchain@v1
+      with:
+          toolchain: stable
+          profile: minimal
+          components: clippy, rustfmt
+          override: true
+    - name: update linux
+      run: sudo apt update 
+    - name: update Rust
+      run: make install
+    - name: Check Rust versions
+      run: make rust-version
+    - name: Format
+      run: make format
+    - name: Lint
+      run: make lint
+    - name: Test
+      run: make test
